css/components/_buttons.scss
// -----------------------------------------------------------------------------
// This file contains all styles related to the button component.
// -----------------------------------------------------------------------------

.btn {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    display: inline-block;
    font-weight: 500;
    letter-spacing: .01em;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    @include touch-manipulation;
    @include no-select;
    border: 1px solid #edf5fc;
    font-size: 16px;
    padding: 14px 30px;
    margin: 0;
    outline: none;
    text-transform: capitalize;
    text-decoration: none;
    border-radius: 6px;
    position: relative;
    height: 52px;
    line-height: 1.4;
    box-shadow: none;
    color: white;
    background: transparent
}

.btn button {
    cursor: pointer;
    padding: 0;
    margin: 0;
    background: transparent;
    border: none;
    outline: none;
    color: inherit;
    font-size: 16px;
    font-weight: 500;
    @include x-appearance(none);
}

.btn {

    &.loading,
    &.disabled,
    &:disabled {
        pointer-events: none;
        cursor: default
    }

    &.disabled, &:disabled {
        opacity: .65;
        cursor: not-allowed;
    }

    &.hover, &:hover {
        border-color: $light-blue;
    }

    &.loading {
        color: transparent !important;

        &:after {
            content: ' ';
            display: block;
            border: 2px solid $white;
            border-left-color: rgba($white, 0.2);
            border-right-color: rgba($white, 0.2);
            border-bottom-color: rgba($white, 0.2);
            height: 30px;
            width: 30px;
            border-radius: 50%;
            position: absolute;
            left: 50%;
            top: 50%;
            margin-left: -15px;
            margin-top: -15px;
            @include prefix(animation, rotate 2s linear infinite, webkit);
        }
    }
}



.btn {

    &__small {
        padding: 6px 10px;
        font-size: 14px;
        height: 32px;
        border-radius: 4px;

        &.loading:after {
            height: 20px;
            width: 20px;
            margin-left: -10px;
            margin-top: -10px
        }

        &-wide {
            padding-left: 30px;
            padding-right: 30px;
        }
    }

    &__smallest {
        font-size: 12px;
        padding: 2px 8px 0;
        height: 26px;
        border-radius: 3px;

        &.loading:after {
            height: 20px;
            width: 20px;
            margin-left: -10px;
            margin-top: -10px
        }
    }

    &__primary {
        background: -webkit-linear-gradient(top, #1f8ded 0%, #1985e3 100%);
        background: linear-gradient(to bottom, #1f8ded 0%, #1985e3 100%);
        border-color: $mist-blue;;
        color: white;

        &.hover, &:hover {
            border-color: $mist-blue;
            background: -webkit-linear-gradient(top, #1280e0 0%, #0675d6 100%);
            background: linear-gradient(to bottom, #1280e0 0%, #0675d6 100%)
        }
    }

    &__secondary {
        border-color: $blue;
        color: $blue;

        &.hover, &:hover {
            border-color: $mist-blue;
            color: $mist-blue;
        }
    }
}


.btn {
    &__play {
        padding-left: 20px;
        padding-right: 20px;

        &span {
            padding-left: 15px;
            display: inline-block;
            position: relative;
        }

        &span:after {
            content: ' ';
            position: absolute;
            top: 50%;
            left: 0;
            display: block;
            border: 6px transparent solid;
            border-left-color: white;
            border-left-width: 8px;
            margin: -8px 0 0
        }
    }

    &__white {
        border-color: white;
        color: white;

        &-alt {
            border: 2px solid $bright-blue;
            background-color: white;
            color: $bright-blue;
            @include prefix(transition, background .2s, webkit);
        }

        &-alt:hover {
            border-color: $bright-blue;
            background-color: rgba($white, 0.9)
        }
    }

    &__blue {
        &-alt {
            border: 2px solid $bright-blue;
            background-color: $bright-blue;
            color: white
        }

        &-alt:hover {
            border-color: $bright-blue;
            background-color: rgba($bright-blue, 0.9)
        }
    }

    &__white {
        border: 2px solid white;
        background-color: white;
        color: $dark-blue;
        border-width: 2px;

        &:hover {
            border-color: rgba($white, 0.9);
            background-color: rgba($white, 0.9)
        }

        &.loading {
            color: transparent !important;
        }

        &.loading:after {
            border: 2px solid $dark-blue;
            border-left-color: rgba(46, 46, 127, 0.2);
            border-right-color: rgba(46, 46, 127, 0.2);
            border-bottom-color: rgba(46, 46, 127, 0.2)
        }
    }
}



@-webkit-keyframes rotate {
    0% {
        @include prefix(transform, rotate(0deg), webkit);
    }
    100% {
        @include prefix(transform, rotate(360deg), webkit);
    }
}

@keyframes rotate {
    0% {
        @include prefix(transform, rotate(0deg), webkit);
    }
    100% {
        @include prefix(transform, rotate(360deg), webkit);
    }
}

.btn {
    &__triangle {
        &-right:after {
            border: 5px transparent solid;
            border-left-color: white;
            border-left-width: 7px;
            content: ' ';
            display: inline-block;
            position: relative;
            vertical-align: middle;
            left: 5px;
            margin-left: 5px;
        }
    }
}

.btn__secondary.btn__triangle-right:after {
    border-left-color: $blue;
}

.btn__secondary.btn__triangle-right:hover:after {
    border-left-color: $mist-blue;
}


@media (max-width: 480px) {
    .btn__long-text {
        padding-left: 15px;
        padding-right: 15px;
        font-size: 14px;
        line-height: 1.7
    }
}

